# Xolotl-Code

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.bat  civ-multi-civ-world-plan.md  long-term-improvement-plan.md  progress.md  rules.md
.github/workflows/: release.yml  rust.yml  tauri-app.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  UI-BUG-SWEEP-BACKLOG.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-cli-completion/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md  01-DISCUSSION-LOG.md  01-REVIEW.md
.planning/phases/01-human-takeover-possession/: 01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/01-w9-lite-multi-model-world-creation-leaderboard/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-orchestration-layer/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/02-w8-renderer-multi-civ-identity/: 02-01-SUMMARY.md  02-VALIDATION.md  deferred-items.md
.planning/phases/03-tauri-shell/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/03-w4-environment-engine/: 03-01-SUMMARY.md  03-PATTERNS.md  03-VALIDATION.md  03-VERIFICATION.md  deferred-items.md
.planning/phases/04-chat-ui/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-UI-SPEC.md  04-VERIFICATION.md
.planning/phases/04-w6-combat-diplomacy/: 04-03-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-agent-dashboard/: 05-01-SUMMARY.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-SUMMARY.md  05-05-SUMMARY.md  05-06-SUMMARY.md  05-07-PLAN.md  05-RESEARCH.md  (+4 more)
.planning/research/: ARCHITECTURE.md  ECONOMY.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: SUMMARY.md  architecture.md  civilization.md  cli.md  contributing.md  headless-protocol.md  index.md  mcp-server.md  providers.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: agents-and-teams.md  chat.md  eval-lab.md  goal-eval.md  skills-and-mcp.md
landing-experiment/: DESIGN.md  index.html  main.js  styles.css
output/civ-gen/: gen_axolotls.py
output/doc/: zealix-pdf-menu-import-ai-plan.docx  zealix-pdf-menu-import-ai-plan.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs  types.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/bench/: Cargo.toml
rust/crates/bench/corpus/: README.md
rust/crates/bench/corpus/bugfix-with-failing-test/: prompt.md  task.json
rust/crates/bench/corpus/bugfix-with-failing-test/seed/: calc.py  test_calc.py
rust/crates/bench/corpus/create-from-scratch/: prompt.md  task.json
rust/crates/bench/corpus/multi-file-edit/: prompt.md  task.json
rust/crates/bench/corpus/multi-file-edit/seed/src/: a.rs  b.rs
rust/crates/bench/corpus/refactor-preserving-api/: prompt.md  task.json
rust/crates/bench/corpus/refactor-preserving-api/seed/src/: lib.rs
rust/crates/bench/corpus/single-file-edit/: prompt.md  task.json
rust/crates/bench/corpus/single-file-edit/seed/src/: lib.rs
rust/crates/bench/src/: corpus.rs  lib.rs  main.rs  recorder.rs  report.rs  runner.rs
rust/crates/commands/src/: lib.rs
rust/crates/lsp/: Cargo.toml
rust/crates/lsp/src/: client.rs  framing.rs  lib.rs  protocol.rs
rust/crates/mcp-server/: Cargo.toml
rust/crates/mcp-server/src/: lib.rs
rust/crates/pdfmd/: Cargo.toml
rust/crates/pdfmd/examples/: convert.rs
rust/crates/pdfmd/src/: extract.rs  lib.rs  model.rs  render.rs  structure.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  bench.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hint_tuning.rs  hooks.rs  lib.rs  model_hints.rs  permissions.rs  plan.rs  prompt.rs  reliability_profile.rs  retrieval.rs  session.rs  todo.rs  tokenizer.rs  usage.rs  web_fetch.rs
rust/crates/runtime/src/edit/: anchored.rs  exact.rs  failure.rs  fuzzy.rs  mod.rs  util.rs  whitespace.rs
rust/crates/runtime/src/edit/formats/: mod.rs  search_replace.rs  udiff.rs
rust/crates/runtime/src/memory/: mod.rs  retrieval.rs  vault.rs
rust/crates/runtime/src/sdd/: detector.rs  mod.rs  spec.rs
rust/crates/runtime/src/subagent/: mod.rs  registry.rs  result.rs  spawner.rs
rust/crates/runtime/src/supervisor/: agent_state.rs  context_store.rs  git_queue.rs  handle.rs  mod.rs  supervisor.rs  tests.rs  worktree.rs
rust/crates/runtime/src/toolcall/: fallback_parser.rs  mod.rs  repair.rs  validate.rs
rust/crates/runtime/src/verify/: detect.rs  mod.rs  parse.rs  run.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: args.rs  bedrock.rs  headless.rs  input.rs  main.rs  mcp.rs  openai.rs  render.rs  style.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs  task.rs
tauri-app/: MACOS_IMPROVEMENT_PLAN.md  MACOS_RELEASE_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
tauri-app/scripts/: check-mac-release.mjs  codex-play-civ.mjs  package-mac-dmg.mjs  run-vite.mjs  run-vitest.mjs  sign-mac-adhoc.mjs  smoke-mac-launch-path.mjs  smoke-mac-open-project.mjs
tauri-app/src/: App.test.tsx  App.tsx  bindings.ts  main.tsx  styles.css  styles.test.ts
tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/examples/: export_bindings.rs  test_chat.rs
tauri-app/src-tauri/src/: civilization.rs  commands.rs  lib.rs  main.rs  permission_prompter.rs  skills_mcp.rs  terminal.rs
(+249 files in other folders)
