[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "net"] }

[lints]
workspace = true
