[package]
name = "bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
runtime = { path = "../runtime" }
tools = { path = "../tools" }
serde = { workspace = true }
serde_json = "1"
chrono = { workspace = true }

[lints]
workspace = true
