[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dirs = "5"
glob = "0.3"
regex = "1"
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
walkdir = "2"
tiktoken = "3.1"
uuid = { workspace = true }
chrono = { workspace = true }
api = { path = "../api" }

[lints]
workspace = true
