[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dirs = "5"
glob = "0.3"
regex = "1"
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = "2"
tiktoken = "3.1"
uuid = { workspace = true }
chrono = { workspace = true }
api = { path = "../api" }
specta = { version = "=2.0.0-rc.25", features = [] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
