[package]
name = "rusty-claude-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
reqwest = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
runtime = { path = "../runtime" }
serde_json = "1"
syntect = { workspace = true }
tokio = { workspace = true }
tools = { path = "../tools" }

[lints]
workspace = true
